Version 1.7.1+svn:
 * Graphics:
   * New portrait for male and female Footpad.
 * Language and i18n:
   * Updated translations: Estonian, Finnish, German, Lithuanian, Polish,
     Serbian
 * User interface:
   * Add an icon to show whether or not the user finished a campaign
   * Fixed bug #13831: Bug with team labels
   * Added a new experimental stacked widget widget
 * Miscellaneous and bugfixes:
   * Fixed language switch not affecting unit descriptions (bug #13827)
   * Fixed teleporting to impassable terrain (bug #13795)
   * Fixed an issue where teleporting could leave a unit halo
   * Fixed [set_variable]'s rand and random when operating on 0..0 (return 0)

Version 1.7.1:
 * AI:
   * Reworked AI code to allow easier creation of AI components.
   * New AI: Composite AI
   * (Optional) new AI configuration syntax.
   * Basic reimplementation of an old C++ AI as a 'candidate action'-based composite AI
   * Autodiscovery of available AI configurations from data/ai/ais.
   * (In debug mode) Autodiscovery of available AI configurations from data/ai/dev
 * Campaigns
   * Delfador's Memoirs: new portrait for Lionel.
    * The Hammer of Thursagan: new portraits for Angarthing, Ratheln.
 * Graphics
   * New portrait for Knight, Ghost.
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Czech, Finnish, French,
     German, Greek, Hungarian, Icelandic, Lithuanian, Polish, Russian,
     Serbian, Turkish
 * User interface:
   * Removed the old obsolete layout algorithm in the new widgets
   * Added unit tests for the new widgets
   * Improved the layout algorithm not to show scrollbars when they make the
     situation worse
   * Add a new transient message dialog
   * Add a new multi page widget
   * Increase the lineheight in the new dialogs
   * Add a blur precommit function to the canvas
   * Improved the redraw algoritm and added more asserts
   * Objectives now use pango markup